force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Merk_heup_revisie_steel_ongecementeerd__c.field-meta.xml
<CustomField>
    <fullName>Merk_heup_revisie_steel_ongecementeerd__c</fullName>
    <description>Kies de fabrikant van de revisie steel, ongecementeerde heup.</description>
    <inlineHelpText>Kies de fabrikant van de revisie steel, ongecementeerde heup.</inlineHelpText>
    <label>Merk heup revisie steel ongecementeerd</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zimmer</fullName>
            </value>
            <value>
                <fullName>Biomet</fullName>
            </value>
            <value>
                <fullName>EndoCare</fullName>
            </value>
            <value>
                <fullName>Johnson &amp; Johnson</fullName>
            </value>
            <value>
                <fullName>Smith Nephew</fullName>
            </value>
            <value>
                <fullName>Mathys</fullName>
            </value>
            <value>
                <fullName>Oudshoorn</fullName>
            </value>
            <value>
                <fullName>Stryker</fullName>
            </value>
            <value>
                <fullName>Wright Medical</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>