force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Merk_Knie_Patella_Femoraal__c.field-meta.xml
<CustomField>
    <fullName>Merk_Knie_Patella_Femoraal__c</fullName>
    <description>Kies de fabrikant van de primaire PFJ knie.</description>
    <label>Merk Knie Patella Femoraal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zimmer</fullName>
            </value>
            <value>
                <fullName>Biomet</fullName>
            </value>
            <value>
                <fullName>Johnson &amp; Johnson</fullName>
            </value>
            <value>
                <fullName>Smith Nephew</fullName>
            </value>
            <value>
                <fullName>Stryker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>