force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Merk_knie_primair_gecementeerd_PS__c.field-meta.xml
<CustomField>
    <fullName>Merk_knie_primair_gecementeerd_PS__c</fullName>
    <description>Kies de fabrikant van de knie primair gecementeerd Posterion Stabilized knie</description>
    <label>Merk knie primair gecementeerd PS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zimmer</fullName>
            </value>
            <value>
                <fullName>Biomet</fullName>
            </value>
            <value>
                <fullName>EndoCare</fullName>
            </value>
            <value>
                <fullName>Johnson &amp; Johnson</fullName>
            </value>
            <value>
                <fullName>Lima</fullName>
            </value>
            <value>
                <fullName>Mathys</fullName>
            </value>
            <value>
                <fullName>Oudshoorn</fullName>
            </value>
            <value>
                <fullName>Smith Nephew</fullName>
            </value>
            <value>
                <fullName>Stryker</fullName>
            </value>
            <value>
                <fullName>Van Straaten</fullName>
            </value>
            <value>
                <fullName>Wright Medical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>