force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Merk_knie_revisie__c.field-meta.xml
<CustomField>
    <fullName>Merk_knie_revisie__c</fullName>
    <description>Kies de fabrikant van het knie revisie product dat het ziekenhuis gebruikt.</description>
    <label>Merk knie revisie</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zimmer</fullName>
            </value>
            <value>
                <fullName>Biomet</fullName>
            </value>
            <value>
                <fullName>Johnson &amp; Johnson</fullName>
            </value>
            <value>
                <fullName>Lima</fullName>
            </value>
            <value>
                <fullName>Oudshoorn</fullName>
            </value>
            <value>
                <fullName>Smith Nephew</fullName>
            </value>
            <value>
                <fullName>Stryker</fullName>
            </value>
            <value>
                <fullName>Wright Medical</fullName>
            </value>
            <value>
                <fullName>Link</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>