force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Merk_schouder_ongecementeerd__c.field-meta.xml
<CustomField>
    <fullName>Merk_schouder_ongecementeerd__c</fullName>
    <description>Kies de fabrikant voor de ongecementeerde schouder, primair en revisie.</description>
    <inlineHelpText>Kies de fabrikant voor de ongecementeerde schouder, primair en revisie.</inlineHelpText>
    <label>Merk schouder ongecementeerd</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zimmer</fullName>
            </value>
            <value>
                <fullName>Arthex</fullName>
            </value>
            <value>
                <fullName>Biomet</fullName>
            </value>
            <value>
                <fullName>Johnson &amp; Johnson</fullName>
            </value>
            <value>
                <fullName>Lima</fullName>
            </value>
            <value>
                <fullName>Mathys</fullName>
            </value>
            <value>
                <fullName>Smith Nephew</fullName>
            </value>
            <value>
                <fullName>Synthes</fullName>
            </value>
            <value>
                <fullName>Tornier</fullName>
            </value>
            <value>
                <fullName>Wright Medical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>