force-app/main/default/objects/Profiel_ziekenhuis__c/fields/tribologie_extra__c.field-meta.xml
<CustomField>
    <fullName>tribologie_extra__c</fullName>
    <label>tribologie extra</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>