force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Type_heup_MIS_steel__c.field-meta.xml
<CustomField>
    <fullName>Type_heup_MIS_steel__c</fullName>
    <description>Kies het type van de MIS heup steel.</description>
    <inlineHelpText>Kies het type van de MIS heup steel.</inlineHelpText>
    <label>Type heup MIS steel</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Merk_heup_MIS_steel__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Fitmore</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Mayo</fullName>
            </value>
            <value>
                <fullName>Onlay</fullName>
            </value>
            <value>
                <fullName>Finsbury</fullName>
            </value>
            <value>
                <fullName>Tri Lock bone preservation stem</fullName>
            </value>
            <value>
                <fullName>CFP</fullName>
            </value>
            <value>
                <fullName>Link korte steel</fullName>
            </value>
            <value>
                <fullName>Taperloc</fullName>
            </value>
            <value>
                <fullName>Anthology</fullName>
            </value>
            <value>
                <fullName>Mia SL</fullName>
            </value>
            <value>
                <fullName>Accolade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>