force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Type_heup_primair_cup_gecementeerd__c.field-meta.xml
<CustomField>
    <fullName>Type_heup_primair_cup_gecementeerd__c</fullName>
    <description>Kies het type gecementeerde cup voor de primaire heup.</description>
    <inlineHelpText>Kies het type gecementeerde cup voor de primaire heup.</inlineHelpText>
    <label>Type heup primair cup gecementeerd</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Merk_heup_primair_cup_gecementeerd__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Müller</fullName>
            </value>
            <value>
                <fullName>ZCA</fullName>
            </value>
            <value>
                <fullName>SHP</fullName>
            </value>
            <value>
                <fullName>EndoCare cup</fullName>
            </value>
            <value>
                <fullName>J&amp;J cup</fullName>
            </value>
            <value>
                <fullName>CCM</fullName>
            </value>
            <value>
                <fullName>Exceter</fullName>
            </value>
            <value>
                <fullName>Link cup</fullName>
            </value>
            <value>
                <fullName>Mueller ring</fullName>
            </value>
            <value>
                <fullName>Reflection</fullName>
            </value>
            <value>
                <fullName>Opera</fullName>
            </value>
            <value>
                <fullName>CS steel</fullName>
            </value>
            <value>
                <fullName>CSL steel</fullName>
            </value>
            <value>
                <fullName>Spectron</fullName>
            </value>
            <value>
                <fullName>MC Minn Pedestal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>