force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Type_heup_primair_cup_ongecementeerd__c.field-meta.xml
<CustomField>
    <fullName>Type_heup_primair_cup_ongecementeerd__c</fullName>
    <description>Kies het type ongecementeerde cup voor de primaire heup.</description>
    <inlineHelpText>Kies het type ongecementeerde cup voor de primaire heup.</inlineHelpText>
    <label>Type heup primair cup ongecementeerd</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Merk_heup_primair_cup_ongecementeerd__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Allofit</fullName>
            </value>
            <value>
                <fullName>Allofit IT</fullName>
            </value>
            <value>
                <fullName>CLS expansie cup</fullName>
            </value>
            <value>
                <fullName>Continuum</fullName>
            </value>
            <value>
                <fullName>CSF cup</fullName>
            </value>
            <value>
                <fullName>Durom LDH</fullName>
            </value>
            <value>
                <fullName>Fitmore</fullName>
            </value>
            <value>
                <fullName>Maxera</fullName>
            </value>
            <value>
                <fullName>TM modular</fullName>
            </value>
            <value>
                <fullName>TM Monobloc</fullName>
            </value>
            <value>
                <fullName>Trilogy cup</fullName>
            </value>
            <value>
                <fullName>Vitek</fullName>
            </value>
            <value>
                <fullName>Ceracup</fullName>
            </value>
            <value>
                <fullName>Mallory head</fullName>
            </value>
            <value>
                <fullName>M2a</fullName>
            </value>
            <value>
                <fullName>Avantage</fullName>
            </value>
            <value>
                <fullName>Exceed</fullName>
            </value>
            <value>
                <fullName>Bionik</fullName>
            </value>
            <value>
                <fullName>Duraloc</fullName>
            </value>
            <value>
                <fullName>Gription</fullName>
            </value>
            <value>
                <fullName>Pinnacle</fullName>
            </value>
            <value>
                <fullName>Ultamet</fullName>
            </value>
            <value>
                <fullName>ExpanSys</fullName>
            </value>
            <value>
                <fullName>Mathys cup</fullName>
            </value>
            <value>
                <fullName>RM Classic</fullName>
            </value>
            <value>
                <fullName>RM press fit</fullName>
            </value>
            <value>
                <fullName>SeleXys</fullName>
            </value>
            <value>
                <fullName>Bicon cup</fullName>
            </value>
            <value>
                <fullName>EP fit</fullName>
            </value>
            <value>
                <fullName>Hofer imhoff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>