force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Type_heup_primair_steel_gecementeerd__c.field-meta.xml
<CustomField>
    <fullName>Type_heup_primair_steel_gecementeerd__c</fullName>
    <description>Kies het type gecementeerde steel voor de primaire heup.</description>
    <inlineHelpText>Kies het type gecementeerde steel voor de primaire heup.</inlineHelpText>
    <label>Type heup primair steel gecementeerd</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Merk_heup_primair_steel_gecementeerd__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>Emeraude</fullName>
            </value>
            <value>
                <fullName>Metabloc</fullName>
            </value>
            <value>
                <fullName>MS30</fullName>
            </value>
            <value>
                <fullName>Müller</fullName>
            </value>
            <value>
                <fullName>Optan</fullName>
            </value>
            <value>
                <fullName>Olympia</fullName>
            </value>
            <value>
                <fullName>SP 2</fullName>
            </value>
            <value>
                <fullName>Stanmore</fullName>
            </value>
            <value>
                <fullName>Taperloc</fullName>
            </value>
            <value>
                <fullName>Cone</fullName>
            </value>
            <value>
                <fullName>C Stem</fullName>
            </value>
            <value>
                <fullName>Charnley</fullName>
            </value>
            <value>
                <fullName>Summit</fullName>
            </value>
            <value>
                <fullName>Lubinus Classic plus</fullName>
            </value>
            <value>
                <fullName>Lubinus SP II</fullName>
            </value>
            <value>
                <fullName>Vario</fullName>
            </value>
            <value>
                <fullName>Centris</fullName>
            </value>
            <value>
                <fullName>Cerima</fullName>
            </value>
            <value>
                <fullName>Müller straight stem cca</fullName>
            </value>
            <value>
                <fullName>Twinsys cemented</fullName>
            </value>
            <value>
                <fullName>CS Plus stem</fullName>
            </value>
            <value>
                <fullName>CPS Plus Stem</fullName>
            </value>
            <value>
                <fullName>Spectron</fullName>
            </value>
            <value>
                <fullName>Exceter</fullName>
            </value>
            <value>
                <fullName>Extend steel</fullName>
            </value>
            <value>
                <fullName>Perfecta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>