force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Type_heup_primair_steel_ongecementeerd__c.field-meta.xml
<CustomField>
    <fullName>Type_heup_primair_steel_ongecementeerd__c</fullName>
    <description>Kies het type ongecementeerde steel voor de primaire heup.</description>
    <label>Type heup primair steel ongecementeerd</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Merk_heup_primair_steel_ongecement__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Alloclassic Zweymüller</fullName>
            </value>
            <value>
                <fullName>Avenir</fullName>
            </value>
            <value>
                <fullName>CLS Brevius</fullName>
            </value>
            <value>
                <fullName>CLS Sportorno</fullName>
            </value>
            <value>
                <fullName>Emeraude</fullName>
            </value>
            <value>
                <fullName>Metabloc</fullName>
            </value>
            <value>
                <fullName>ML Taper</fullName>
            </value>
            <value>
                <fullName>ML Taper Kinective</fullName>
            </value>
            <value>
                <fullName>Optan</fullName>
            </value>
            <value>
                <fullName>DB 10</fullName>
            </value>
            <value>
                <fullName>Mallory head</fullName>
            </value>
            <value>
                <fullName>Taperloc</fullName>
            </value>
            <value>
                <fullName>EndoCare steel</fullName>
            </value>
            <value>
                <fullName>Corail</fullName>
            </value>
            <value>
                <fullName>CBC (kopie cls)</fullName>
            </value>
            <value>
                <fullName>CBH (kopie Zweymuller)</fullName>
            </value>
            <value>
                <fullName>Twinsys (kopie avenir)</fullName>
            </value>
            <value>
                <fullName>SL Plus</fullName>
            </value>
            <value>
                <fullName>SN steel</fullName>
            </value>
            <value>
                <fullName>Osteonics</fullName>
            </value>
            <value>
                <fullName>Profemur</fullName>
            </value>
            <value>
                <fullName>Quadra</fullName>
            </value>
            <value>
                <fullName>S rom modular hip system</fullName>
            </value>
            <value>
                <fullName>AML Total hip system</fullName>
            </value>
            <value>
                <fullName>Prodigy</fullName>
            </value>
            <value>
                <fullName>Summit</fullName>
            </value>
            <value>
                <fullName>Trilock</fullName>
            </value>
            <value>
                <fullName>GSS</fullName>
            </value>
            <value>
                <fullName>Furlong</fullName>
            </value>
            <value>
                <fullName>Synergy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>