force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Type_heup_resurfacing__c.field-meta.xml
<CustomField>
    <fullName>Type_heup_resurfacing__c</fullName>
    <description>Kies het type van de resurfacing heup.</description>
    <inlineHelpText>Kies het type van de resurfacing heup.</inlineHelpText>
    <label>Type heup resurfacing</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Merk_heup_resurfacing__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Durom</fullName>
            </value>
            <value>
                <fullName>Recap</fullName>
            </value>
            <value>
                <fullName>Cormet</fullName>
            </value>
            <value>
                <fullName>Optimom</fullName>
            </value>
            <value>
                <fullName>ASR</fullName>
            </value>
            <value>
                <fullName>Birmingham hip</fullName>
            </value>
            <value>
                <fullName>Adept</fullName>
            </value>
            <value>
                <fullName>Per mini hip implant</fullName>
            </value>
            <value>
                <fullName>Finsbury</fullName>
            </value>
            <value>
                <fullName>Conserve plus</fullName>
            </value>
            <value>
                <fullName>Conserve BFH</fullName>
            </value>
            <value>
                <fullName>Profemur Z modular hip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>