force-app/main/default/objects/Profiel_ziekenhuis__c/fields/Type_heup_revisie_cup_gecementeerd__c.field-meta.xml
<CustomField>
    <fullName>Type_heup_revisie_cup_gecementeerd__c</fullName>
    <description>Kies het type gecementeerde cup voor de revisie heup.</description>
    <inlineHelpText>Kies het type gecementeerde cup voor de revisie heup.</inlineHelpText>
    <label>Type heup revisie cup gecementeerd</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Merk_heup_revisie_cup_gecementeerd__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Zimmer Müller</fullName>
            </value>
            <value>
                <fullName>ZCA cup</fullName>
            </value>
            <value>
                <fullName>Biomet cup</fullName>
            </value>
            <value>
                <fullName>seleXys DS</fullName>
            </value>
            <value>
                <fullName>SN Müller</fullName>
            </value>
            <value>
                <fullName>Contemporary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>